src/scss/layout/_navigation.scss
@charset "utf-8";

/* navigation
/* ---------------------------------------- */
%navBase {
  position: absolute;
  width: 100%;
  top: 0;
  z-index: 9999;
  margin: 0;
}

.menu-toggle {
  width: 100%;
  height: $navHeight;
  margin: 0;
  padding: 8px;
  text-align: center;
  color: $colorWhite;
  font-size: rem-calc(16);
  cursor: pointer;
  font-weight: normal;
  &:after {
    @include fa($content: '\f107', $fontsize: 12px, $valaign: baseline);
    position: absolute;
    top: 28px;
    right: 0;
    left: 2px;
    margin: 0 auto;
    width: 12px;
    height: 12px;
  }
}
.main-navigation {
  @extend %navBase;
  background-color: lighten($colorBrown, 4%);
  ul {
    a {
      color: #fff;
    }
  }
}
.main-small-navigation {
  @extend %navBase;
  background-color: lighten($colorBrown, 4%);
}
.menu {
  display: none;
  margin: 0 10px;
  padding-left: 0;
  position: relative;
  @media #{$large-up} {
    padding-right: 120px;
  }
  a {
    display: block;
    padding: $navPadding;
    line-height: 1.0;
    color: $colorWhite;
    font-size: rem-calc(14);
  }
  &-item {
    min-height: $navHeight;
    border-top: 1px solid lighten($colorNav, 50%);
  }
  >li {
    &:first-child {
      border-top: none;
    }
    // English menu item
    &:last-child {
      >a {
        &:before {
          @include fa('\f0ac');
          margin-right: 5px;
        }
      }
      @media #{$medium-up} {
        background-color: darken($colorBrown, 20%);
        font-weight: bold;
        .sub-menu {
          right: 0;
        }
      }
      @media #{$large-up} {
        &:last-child {
          position: absolute;
          top: 0;
          right: 30px;
        }
      }
    }
  }
}
.sub-menu {
  li {
    min-height: $navHeight;
    border-top: 1px dotted lighten($colorNav, 50%);
    a {
      color: $colorWhite;
    }
  }
}
/* media */
@media screen and (min-width: 600px) {
  .menu-main-container {
    position: relative;
  }
  .main-navigation {
    position: fixed;
    top: 0;
    .admin-bar & {
      top: 46px;
    }
    ul {
      padding-left: 0;
      margin-top: 0;
      li {
        &:hover {
          ul {
            display: block;
          }
        }
      }
      ul {
        display: none;
        position: absolute;
        top: $navHeight;
        li {
          width: 233px;
        }
        a {
          width: 233px;
        }
      }
    }
  }
  .menu {
    height: $navHeight;
    display: flex;
    align-items: center;
    &-item {
      border-bottom: none;
      a {
        color: #fff;
        transition: 0.3s;
        &:hover {
          background-color: $colorNav;
        }
      }
    }
    &-item-has-children {
      > a {
        position: relative;
        &:after {
          @include fa($content: '\f107', $fontsize: 12px, $valaign: baseline);
          position: absolute;
          top: 32px;
          right: 0;
          left: 0;
          margin: 0 auto;
          width: 12px;
          height: 12px;
        }
      }
    }
    &-item-type-custom {
      position: relative;
      > a {
        margin-right: 0;
      }
    }
    >li {
      border-top: none;
    }
  }
  .sub-menu {
    box-shadow: 0 2px 3px rgba(0,0,0,.3);
    li {
      margin: 0;
      a {
        color: $colorWhite;
        background-color: $colorNavLighten;
        transition: 0.2s;
        &:hover {
          color: $colorWhite;
          background-color: $colorNav;
        }
      }
    }
  }
}
@media screen and (min-width: 783px) {
  .main-navigation {
    .admin-bar & {
      top: 32px;
    }
  }
}

